# Engine

./: .gitignore  CMakeLists.txt  README.md  TODO
shader/: basicFragment.frag  basicPhongFragment.fs  basicPhongVertex.vs  basicVertex.vert  raycasterFragment.frag  raycasterGeometry.geom  raycasterVertex.vert  textureBasicFragment.fs  textureBasicVertex.vs  textureFragment.frag  textureVertex.vert
src/: AABB.h  BVH.cpp  BVH.h  Character.h  EngineCore.cpp  EngineCore.h  Rigidbody.h  camera.cpp  camera.h  controllable.cpp  controllable.h  cube.h  grid.h  main.cpp  materialMesh.cpp  materialMesh.h  mesh.cpp  mesh.h  model.cpp  model.h  movable.h  object.cpp  object.h  pointCloud.cpp  pointCloud.h  raycaster.cpp  raycaster.h  renderable.h  rotatedCube.cpp  rotatedCube.h  shader.cpp  shader.h  texture.cpp  texture.h  texturedCube.cpp  texturedCube.h  window.cpp  window.h
